--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-	"name": "node-api",
-	"main": "server.js",
-	"dependencies": {
-		"express": "~4.0.0",
-		"mongoose": "~3.6.13",
-                "morgan": "~1.0.0",
-		"body-parser": "~1.0.1"
-	}
+  "name": "node-api",
+  "main": "server.js",
+  "dependencies": {
+    "body-parser": "~1.0.1",
+    "express": "~4.0.0",
+    "jade": "^1.7.0",
+    "mongoose": "~3.6.13",
+    "morgan": "~1.0.0"
+  }
 }
-
-
-
-
