--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "~1.0.1",
+    "ejs": "^1.0.0",
     "express": "~4.0.0",
     "jade": "^1.7.0",
     "mongoose": "~3.6.13",
